== Changelog ==

= 2.1.4 =
* Fixed: Actually fixed abandoned Checkout orders not being deleted this time.
* Fixed: Payments towards a failed renewal order are now possible.

= 2.1.3 =
* Fixed: We were still using calls to `get_posts` a few places, which was incompatible with WooCommerce HPOS. This fixes gateway changes, in-app description updates, and in-app subscription cancellation for installations using HPOS.
* Fixed: Some payments that were cancelled quickly could get stuck in a "MobilePay payments are automatically captured" loop for merchants using MobilePay.
* Fixed: An issue where swapping gateways did not work for MobilePay merchants, because a certain URL was not whitelisted in wp_safe_redirect.

= 2.1.2 =
* Fixed: Cleaning up old cancelled orders that were initiated via Checkout now works as intended.
* Fixed: Old agreements that customers now cancelled in the Vipps or MobilePay apps are now cancelled properly in WooCommerce.
* Fixed: VAT is now properly shown when a subscription is switched to Vipps MobilePay.
* Fixed: If an agreement is cancelled we don't want to listen for webhooks when the actor is the merchant, i.e. ourselves. This prevents us from cancelling our subscription when changing payment gateway from Vipps MobilePay to Vipps MobilePay.

= 2.1.1 =
* Fixed: Added two new hosts to `allowed_redirect_hosts`: `pay.mobilepay.dk` and `pay.mobilepay.fi`. This fixes a bug where customers were not able to switch to MobilePay.

= 2.1.0 =
* Fixed: No longer throw an error when checking a Checkout payment where the subscription is now deleted.
* Fixed: Properly handle in-app subscription cancelling.
* Added: Support for the SEK currency.
* Fixed: Identified a potentially critical bug where the idempotency key was deleted from orders upon payment retry.

= 2.0.8 =
* Fixed: We should not return `true` in `cart_supports_checkout` if the cart is empty.

= 2.0.7 =